--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -58,6 +58,10 @@
     margin: 20px auto 0px auto;
 }
 
+.enter-btn:hover {
+    background-color: rgba(161, 0, 0, 0.6);
+}
+
 .welcome-section {
     background-color: rgb(221, 221, 221);
     padding: 10px;
