--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -15,6 +15,7 @@
     flex-basis: 25%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .collecting:before {
