--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -27,7 +27,7 @@
     filter: blur(5px);
 }
 
-.banner > h2 {
+.banner h2 {
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 10px;
