pozadí Designers banneru

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -48,6 +48,10 @@
     background-image: url("../img/collecting_banner_bg.jpg");
 }
 
+.designers {
+    background-image: url("../img/designers_banner_bg-min.jpg");
+}
+
 .enter-btn {
     background-color: rgb(161, 0, 0);
     color: white;
