--- a/assets/css/collecting.css
+++ b/assets/css/collecting.css
@@ -1,3 +1,11 @@
+* {
+    color: white;
+}
+
+.community-section h2 {
+    padding-top: 0px;
+}
+
 .black-transparent-bg {
     background-color: rgba(0, 0, 0, 0.6);
 }
@@ -6,8 +14,8 @@
     padding: 10px;
 }
 
-.pad-15 {
-    padding: 15px;
+.pad-20 {
+    padding: 20px;
 }
 
 .round-corners {
@@ -17,10 +25,17 @@
 h2 {
     text-align: center;
     margin-top: 0px;
+    padding: 15px 0px;
+    margin-bottom: 0px;
+}
+
+.white-underline {
+    border-bottom: 3px white solid;
 }
 
 p {
     margin: 0px;
+    padding: 15px;
 }
 
 article {
@@ -33,52 +48,32 @@ article {
     background-image: url("../img/portfolio52_bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    color: white;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.intro-content-wrapper {
-    background-color: rgba(0, 0, 0, 0.6);
-    padding: 10px;
-    border-radius: 10px;
 }
 
 .intro {
     background-image: url("../img/collection.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 10px;
-    padding: 15px;
-    color: white;
 }
 
 .collecting-content-wrapper {
     background-color: rgb(221,221,221);
-    padding: 20px;
 }
 
 .community-section {
     display: flex;
+    margin: 10px;
 }
 
 .community-section > article {
     flex-basis: 50%;
-    background-color: rgba(0, 0, 0, 0.6);
     margin: 10px;
-    padding: 15px;
-    border-radius: 10px;
-    color: white;
 }
 
 .article-content {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.article-content > h2 {
-    margin-top: 0px;
 }
 
 .btn {
@@ -97,8 +92,8 @@ article {
 }
 
 .logo-crop {
-    width: 100px;
-    height: 100px;
+    max-width: 100px;
+    max-height: 100px;
     position: relative;
     overflow: hidden;
     border-radius: 50%;
