--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -33,7 +33,7 @@
     padding: 10px;
     margin: 0px;
     border-radius: 10px 10px 0px 0px;
-    border-bottom: 3px white solid;
+    border-bottom: 3px darkgray solid;
 }
 
 .banner p {
