--- a/assets/css/collecting.css
+++ b/assets/css/collecting.css
@@ -79,21 +79,6 @@ article {
     align-items: center;
 }
 
-.btn {
-    background-color: rgb(161, 0, 0);
-    color: white;
-    text-decoration: none;
-    padding: 15px;
-    text-transform: uppercase;
-    border-radius: 10px;
-    cursor: crosshair;
-    margin: 20px auto 0px auto;
-}
-
-.btn:hover {
-    background-color: rgba(161, 0, 0, 0.6);
-}
-
 .logo-crop {
     max-width: 100px;
     max-height: 100px;
@@ -108,3 +93,5 @@ article {
     height: 100%;
     width: auto;
 }
+
+/*tlacitkum mozna chybi margin: 20px auto 0px auto;*/
