--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -58,20 +58,32 @@ nav ul > li {
     padding: 5px;
 }
 
-nav .current-page {
+.btn {
     background-color: rgb(161, 0, 0);
-}
-
-nav a {
     color: white;
     text-decoration: none;
     padding: 15px;
     text-transform: uppercase;
-    background-color: rgb(0, 0, 0);
     border-radius: 10px;
     cursor: crosshair;
 }
 
-nav a:hover:not(.current-page) {
-    background-color: rgba(161, 0, 0, 0.3);
+.btn:hover {
+    background-color: rgba(161, 0, 0, 0.6);
+}
+
+.btn-nav {
+    background-color: rgb(0, 0, 0);
+}
+
+.btn-current-page {
+    background-color: rgb(161, 0, 0);
+}
+
+.btn-current-page:hover {
+    background-color: rgb(161, 0, 0);
+}
+
+.btn-centered {
+    margin: 20px auto 0px auto;
 }
