sjednocení CSS podtržení nadpisů

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -87,3 +87,7 @@ nav ul > li {
 .btn-centered {
     margin: 20px auto 0px auto;
 }
+
+.darkgray-underline {
+    border-bottom: 3px darkgray solid;
+}
