--- a/assets/css/collecting.css
+++ b/assets/css/collecting.css
@@ -1,17 +1,5 @@
-* {
-    color: white;
-}
-
 .community-section h2 {
     padding-top: 0px;
-}
-
-.black-transparent-bg {
-    background-color: rgba(0, 0, 0, 0.6);
-}
-
-.black-semitransparent-bg {
-    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .pad-10 {
@@ -22,23 +10,10 @@
     padding: 20px;
 }
 
-.round-corners {
-    border-radius: 10px;
-}
-
 h2 {
     text-align: center;
     padding: 15px 0px;
     margin: 0px;
-}
-
-.darkgray-underline {
-    border-bottom: 3px darkgray solid;
-}
-
-p {
-    margin: 0px;
-    padding: 15px;
 }
 
 article {
@@ -61,6 +36,7 @@ article {
 
 .collecting-content-wrapper {
     background-color: rgb(221,221,221);
+    padding: 0px 15px 15px 15px;
 }
 
 .community-section {
