--- a/assets/css/designers.css
+++ b/assets/css/designers.css
@@ -1,33 +1,16 @@
 .designers-content-wrapper {
     background-color: rgb(221, 221, 221);
-    padding: 10px;
+    padding: 0px 15px 15px 15px;
 }
 
 .designer-container {
-    background-color: gray;
-    color: white;
     display: flex;
     padding: 15px;
-    margin: 0px 10px 10px 10px;
-    border-radius: 10px;
+    margin-bottom: 15px;
 }
 
-.designer-container h2 {
-    color: white;
-    margin: 0px;
-    padding: 5px;
-}
-
-.description {
-    margin-left: 15px;
-}
-
-.description h3 {
-    padding-left: 5px;
-}
-
-.description p {
-    padding-left: 5px;
+.designer-container:last-child {
+    margin-bottom: 0px;
 }
 
 .card-designs {
@@ -46,4 +29,8 @@
     height: 100%;
     padding: 10px;
     border-radius: 20px;
+}
+
+.description p {
+    padding: 0px;
 }
