--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -11,7 +11,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     margin: 20px 5px;
-    border-radius: 10px;
     flex-basis: 25%;
     display: flex;
     flex-direction: column;
@@ -28,18 +27,12 @@
 }
 
 .banner h2 {
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
     padding: 10px;
     margin: 0px;
     border-radius: 10px 10px 0px 0px;
 }
 
 .banner p {
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 10px;
-    margin: 0px;
     border-radius: 0px 0px 10px 10px;
 }
 
@@ -61,13 +54,5 @@
 
 .welcome-section {
     background-color: rgb(221, 221, 221);
-    padding: 20px 15px 0px 15px;
-}
-
-.welcome-section > p {
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 20px;
-    border-radius: 10px;
-    margin: 0px;
+    padding: 0px 15px;
 }
