--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,7 +43,7 @@ nav ul {
 }
 
 nav ul > li {
-    padding: 5px;
+    padding: 20px 5px;
 }
 
 footer {
@@ -62,6 +62,7 @@ footer {
     text-transform: uppercase;
     border-radius: 10px;
     cursor: crosshair;
+    white-space: nowrap;
 }
 
 .btn:hover {
@@ -84,10 +85,6 @@ footer {
     margin: 20px auto 0px auto;
 }
 
-.darkgray-underline {
-    border-bottom: 3px darkgray solid;
-}
-
 p {
     margin: 0px;
     padding: 15px;
@@ -99,4 +96,11 @@ p {
 
 .black-semitransparent-bg {
     background-color: rgba(0, 0, 0, 0.7);
+}
+
+.article-heading {
+    text-align: center;
+    padding: 15px 0px;
+    margin: 0px;
+    border-bottom: 3px darkgray solid;
 }
