--- a/assets/css/collecting.css
+++ b/assets/css/collecting.css
@@ -41,6 +41,16 @@ article {
     padding-bottom: 15px;
 }
 
+@media (max-width: 768px) {
+    .community-section {
+        flex-wrap: wrap;
+    }
+
+    .community-section > article {
+        flex-basis: 100%;
+    }
+}
+
 .article-content {
     display: flex;
     flex-direction: column;
