--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -17,13 +17,27 @@
     justify-content: space-between;
 }
 
-.collecting:before {
-    /* TODO - blur bg on hover */
-    -webkit-filter: blur(5px);
-    -moz-filter: blur(5px);
-    -o-filter: blur(5px);
-    -ms-filter: blur(5px);
-    filter: blur(5px);
+@media (max-width: 1024px) {
+    .banners-wrapper {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    
+    .banner {
+        flex-basis: 30%;
+    }
+}
+
+@media (max-width: 768px) {
+    .banner {
+        flex-basis: 48%;
+    }
+}
+
+@media (max-width: 580px) {
+    .banner {
+        flex-basis: 100%;
+    }
 }
 
 .banner h2 {
