--- a/assets/css/manufacturers.css
+++ b/assets/css/manufacturers.css
@@ -3,3 +3,15 @@
     padding: 10px;
     margin: 0px;
 }
+
+.intro-section {
+    margin-bottom: 25px;
+}
+
+.manufacturers-section > article {
+    margin-bottom: 10px;
+}
+
+.manufacturers-section:last-child {
+    margin-bottom: 0px;
+}
