--- a/assets/css/manufacturers.css
+++ b/assets/css/manufacturers.css
@@ -15,3 +15,16 @@
 .manufacturers-section:last-child {
     margin-bottom: 0px;
 }
+
+.manufacturers-section > article > figure {
+    background-color: white;
+    text-align: center;
+    margin: 10px 0px 0px 0px;
+    height: 100px;
+    max-height: 200px;
+    overflow: hidden;
+}
+
+figure > img {
+    max-height: 100%;
+}
