--- a/assets/css/manufacturers.css
+++ b/assets/css/manufacturers.css
@@ -10,6 +10,9 @@
 
 .manufacturers-section > article {
     margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .manufacturers-section:last-child {
@@ -21,8 +24,16 @@
     text-align: center;
     margin: 10px 0px 0px 0px;
     height: 100px;
-    max-height: 200px;
+    width: 100%;
     overflow: hidden;
+}
+
+article > h2 {
+    width: 100%;
+}
+
+article {
+    padding-bottom: 15px;
 }
 
 figure > img {
