--- a/assets/css/uses.css
+++ b/assets/css/uses.css
@@ -5,7 +5,11 @@ h3 {
 
 section {
     background-color: rgb(221, 221, 221);
-    padding: 10px 10px 0px 10px;
+    padding: 10px;
+}
+
+section article:last-child {
+    margin-bottom: 0px;
 }
 
 article {
