--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,7 +31,7 @@ header h1 {
 }
 
 nav {
-    margin-top: 10px;
+    margin-top: 15px;
     padding-bottom: 20px;
 }
 
@@ -40,10 +40,8 @@ nav ul {
     justify-content: center;
     flex-wrap: wrap;
     list-style-type: none;
-}
-
-nav ul > li {
-    padding: 20px 5px;
+    gap: 40px 10px;
+    padding: 0px;
 }
 
 footer {
