--- a/assets/css/uses.css
+++ b/assets/css/uses.css
@@ -12,12 +12,37 @@ section article:last-child {
     margin-bottom: 0px;
 }
 
-article {
+.article-content {
     display: flex;
-    flex-direction: column;
     margin-bottom: 10px;
+    padding: 15px;
 }
 
-iframe {
-    margin: 15px auto;
+.article-content > p {
+    flex-basis: 50%;
+}
+
+.article-content > div {
+    flex-basis: 50%;
+    position: relative;
+    height: 0px;
+    padding-bottom: 28.125%;
+}
+
+div > iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+}
+
+@media (max-width: 1024px) {
+    .article-content {
+        flex-direction: column;
+    }
+
+    .article-content > div {
+        padding-bottom: 56.25%;
+    }
 }
