úvodní odstavec a id článků s designéry

--- a/assets/css/designers.css
+++ b/assets/css/designers.css
@@ -1,6 +1,30 @@
-.designers-content-wrapper {
+section {
     background-color: rgb(221, 221, 221);
+}
+
+section:first-of-type {
+    padding: 20px;
+}
+
+.designers-content-wrapper {
     padding: 0px 15px 15px 15px;
+}
+
+.designer-selection {
+    display: flex;
+    justify-content: center;
+    gap: 10px 10px;
+    padding: 0px 15px 15px 15px;
+}
+
+@media (max-width: 1024px) {
+    .designer-selection {
+        flex-wrap: wrap;
+    }
+}
+
+.btn-back-to-selection {
+    margin: 0% 50%;
 }
 
 .designer-container {
@@ -62,17 +86,6 @@
 
 .designer-profile ul {
     margin: 0px;
-}
-
-.designer-links {
-    display: flex;
-    list-style-type: none;
-    padding: 15px 0px 0px 0px;
-}
-
-.designer-links > li {
-    margin: 5px;
-    padding: 10px;
 }
 
 .design-gallery {
