--- a/assets/css/manufacturers.css
+++ b/assets/css/manufacturers.css
@@ -19,15 +19,6 @@
     margin-bottom: 0px;
 }
 
-.manufacturers-section > article > figure {
-    background-color: white;
-    text-align: center;
-    margin: 10px 0px 0px 0px;
-    height: 100px;
-    width: 100%;
-    overflow: hidden;
-}
-
 article > h2 {
     width: 100%;
 }
@@ -36,6 +27,38 @@ article {
     padding-bottom: 15px;
 }
 
+.article-content {
+    display: flex;
+}
+
+.article-content > figure {
+    flex-basis: 33%;
+    margin: 0px;
+    padding: 15px;
+}
+
+.article-content > .paragraphs {
+    flex-basis: 66%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+@media (max-width: 768px) {
+    .article-content {
+        flex-direction: column-reverse;
+    }
+
+    .article-content > figure {
+        padding: 15px 20px;
+    }
+}
+
 figure > img {
-    max-height: 100%;
+    width: 100%;
+    border-radius: 10px;
+}
+
+article > .btn-centered {
+    margin-top: 0px;
 }
