--- a/assets/css/uses.css
+++ b/assets/css/uses.css
@@ -3,33 +3,43 @@ h3 {
     margin: 0px;
 }
 
-section {
+main {
     background-color: rgb(221, 221, 221);
     padding: 10px;
 }
 
-section article:last-child {
+main article:last-child {
     margin-bottom: 0px;
 }
 
 .article-content {
     display: flex;
+    justify-content: center;
     margin-bottom: 10px;
     padding: 15px;
+    gap: 15px 15px;
 }
 
-.article-content > p {
+.article-content > .paragraphs {
     flex-basis: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.article-content > div {
+.paragraphs > ul {
+    margin-top: 0px;
+}
+
+.article-content > .video-wrapper {
     flex-basis: 50%;
     position: relative;
     height: 0px;
     padding-bottom: 28.125%;
+    margin: auto 0px;
 }
 
-div > iframe {
+.video-wrapper > iframe {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -42,7 +52,7 @@ div > iframe {
         flex-direction: column;
     }
 
-    .article-content > div {
+    .article-content > .video-wrapper {
         padding-bottom: 56.25%;
     }
 }
