oprava zarovnání textu na stránce Designers

--- a/assets/css/designers.css
+++ b/assets/css/designers.css
@@ -67,6 +67,10 @@ section:first-of-type {
 
 .designer-profile > div {
     flex-basis: 66%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px;
 }
 
 .designer-profile > figure {
